add CSS-09-Union-selector file

--- a/CSS-09-Union-selector.html
+++ b/CSS-09-Union-selector.html
@@ -3,8 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Union selector</title>
+	<style type="text/css">
+		ul,p{
+			color: red;
+		}
+	</style>
 </head>
 <body>
-	
+	<ul class="opt1">
+		<li>
+			<p class="001">我是一朵花</p>
+			<p class="002">我是一棵草</p>
+		</li>
+	</ul>
 </body>
 </html>
