--- a/CSS-box-model.html
+++ b/CSS-box-model.html
@@ -45,21 +45,22 @@
 		}
 	</style> -->
 	<style type="text/css">
-		.box1{
+		/*.box1{
 			height: 100px;
 			width: 100px;
 			background: red;
 			display: inline-block;
+		}*/
 			/*加上display这个属性之后两个盒子会水平放在页面上，但是会改变原本盒子模型的属性。导致在垂直方向上一样可以叠加margin值，*/
 			
-		}
-		.box2{
+		
+		/*.box2{
 			height: 100px;
 			width: 100px;
 			background: blue;
 			display: inline-block;
 			
-		}
+		}*/
 	</style>
 </head>
 <body>
@@ -69,9 +70,12 @@
 		<div class="box2">box2</div>
 		<div class="box3">box3</div>
 	</div> -->
-	<div class="box1">box1</div>
+	<!-- <div class="box1">box1</div>
 	<div class="box2">box2</div>
-
-
+ -->
+	<div>
+		<div class="box1">box1</div>
+		<div>box2</div>
+	</div>
 </body>
 </html>
